--- a/styles/style.css
+++ b/styles/style.css
@@ -87,6 +87,7 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -116,6 +117,7 @@ ol {
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
+  color: #fff;
   background: transparent;
   appearance: none;
 }
@@ -153,6 +155,7 @@ ol {
   display: flex;
   gap: 15px;
 }
+
 .search-form__pseudo-checkbox {
   display: flex;
   align-items: center;
